Blender 2.8 crashes with the new multires. WITH_OPENSUBDIV_MODIFIER ON #57566

Closed
opened 2018-11-01 18:25:44 +01:00 by Erick Tukuniata · 5 comments

System Information
Operating system and graphics card win7 gtx 550ti

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen) My own build and somehow i don't have the hash :( , I built it less than an hour ago
Worked: (optional)

Short description of error
Crash after sculpting first and adding more subdivision.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Make sure that you have a build that was built WITH_OPENSUBDIV_MODIFIER ON otherwise you will not notice the crash
  2. with the default cube go to sculpt mode
  3. add multires. modifier and add some subdivisions, 2 will be okay
  4. sculpt some, any brush will do.
  5. add more subdivisions ( one will be good to crash Blender)

Another way to crash it
repeat a every step from above but the last one do this:
5. Delete the multres modifier while in sculpt mode.

PS: i know @Sergey is working on multires. that why i was a bit hesitating to fill a bug report. If it is a known issue feel free to close the report.

**System Information** Operating system and graphics card win7 gtx 550ti **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) My own build and somehow i don't have the hash :( , I built it less than an hour ago Worked: (optional) **Short description of error** Crash after sculpting first and adding more subdivision. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Make sure that you have a build that was built WITH_OPENSUBDIV_MODIFIER ON otherwise you will not notice the crash 2. with the default cube go to sculpt mode 3. add multires. modifier and add some subdivisions, 2 will be okay 4. sculpt some, any brush will do. 5. add more subdivisions ( one will be good to crash Blender) Another way to crash it repeat a every step from above but the last one do this: 5. Delete the multres modifier while in sculpt mode. PS: i know @Sergey is working on multires. that why i was a bit hesitating to fill a bug report. If it is a known issue feel free to close the report.

Added subscribers: @Sergey, @ErickNyanduKabongo

Added subscribers: @Sergey, @ErickNyanduKabongo
Sergey Sharybin was assigned by Philipp Oeser 2018-11-02 09:52:51 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm (as of 0c8aa85069)

this is backtrace for the first way to crash (add more subdivisions)

1 raise                                                           0x7ffff467153f 
2 abort                                                           0x7ffff465b895 
3 multires_reshape_vertex_from_final_data multires_reshape.c 296  0x2ae77e9      
4 reshape_from_ccg_regular_face           multires_reshape.c 1081 0x2aead2b      
5 reshape_from_ccg_task                   multires_reshape.c 1146 0x2aeb13c      
6 parallel_range_func                     task.c             1027 0x2edf708      
7 task_scheduler_thread_run               task.c             441  0x2edcf07      
8 start_thread                                                    0x7ffff480f58e 
9 clone                                                           0x7ffff4736513 

this is from the second way to crash (delete modifier)

1   multires_reshape_ensure_displacement_grid                                                                                                                                                                 multires_reshape.c 97   0x2ae6ccb      
2   multires_reshape_ensure_displacement_grids                                                                                                                                                                multires_reshape.c 111  0x2ae6d54      
3   multires_reshape_ensure_grids                                                                                                                                                                             multires_reshape.c 142  0x2ae6e8c      
4   multiresModifier_reshapeFromCCG                                                                                                                                                                           multires_reshape.c 1170 0x2aeb20f      
5   object_update_from_subsurf_ccg                                                                                                                                                                            object.c           391  0x2b02487      
6   BKE_object_free_derived_caches                                                                                                                                                                            object.c           459  0x2b02626      
7   mesh_build_data                                                                                                                                                                                           DerivedMesh.c      1999 0x29863ce      
8   makeDerivedMesh                                                                                                                                                                                           DerivedMesh.c      2109 0x2986875      
9   BKE_object_handle_data_update                                                                                                                                                                             object_update.c    213  0x2b15b64      
10  BKE_object_eval_uber_data                                                                                                                                                                                 object_update.c    342  0x2b16146      
11  std::__invoke_impl<void, void ( *&)(Depsgraph *, Scene *, Object *), Depsgraph *, Scene *&, Object *&>                                                                                                    invoke.h           60   0x2f09672      
12  std::__invoke<void ( *&)(Depsgraph *, Scene *, Object *), Depsgraph *, Scene *&, Object *&>                                                                                                               invoke.h           95   0x2f083ce      
13  std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *))(Depsgraph *, Scene *, Object *)>::__call<void, Depsgraph *&&, 0ul, 1ul, 2ul>(std::tuple<Depsgraph *&&>&&, std::_Index_tuple<0ul, 1ul, 2ul>) functional         400  0x2f06f8a      
14  std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *))(Depsgraph *, Scene *, Object *)>::operator()<Depsgraph *, void>(Depsgraph *&&)                                                              functional         484  0x2f052b9      
15  std::_Function_handler<void (Depsgraph *), std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *))(Depsgraph *, Scene *, Object *)>>::_M_invoke(std::_Any_data const&, Depsgraph *&&)               std_function.h     297  0x2f028cb      
16  std::function<void (Depsgraph *)>::operator()(Depsgraph *) const                                                                                                                                          std_function.h     687  0x2f1981f      
17  DEG::deg_task_run_func                                                                                                                                                                                    deg_eval.cc        94   0x2f18fb2      
18  handle_local_queue                                                                                                                                                                                        task.c             419  0x2edd04a      
19  task_scheduler_thread_run                                                                                                                                                                                 task.c             448  0x2edd04a      
20  start_thread                                                                                                                                                                                                                      0x7ffff480f58e
                                                                                                                                                                                                                                  
Can confirm (as of 0c8aa85069) this is backtrace for the first way to crash (add more subdivisions) ``` 1 raise 0x7ffff467153f 2 abort 0x7ffff465b895 3 multires_reshape_vertex_from_final_data multires_reshape.c 296 0x2ae77e9 4 reshape_from_ccg_regular_face multires_reshape.c 1081 0x2aead2b 5 reshape_from_ccg_task multires_reshape.c 1146 0x2aeb13c 6 parallel_range_func task.c 1027 0x2edf708 7 task_scheduler_thread_run task.c 441 0x2edcf07 8 start_thread 0x7ffff480f58e 9 clone 0x7ffff4736513 ``` this is from the second way to crash (delete modifier) ``` 1 multires_reshape_ensure_displacement_grid multires_reshape.c 97 0x2ae6ccb 2 multires_reshape_ensure_displacement_grids multires_reshape.c 111 0x2ae6d54 3 multires_reshape_ensure_grids multires_reshape.c 142 0x2ae6e8c 4 multiresModifier_reshapeFromCCG multires_reshape.c 1170 0x2aeb20f 5 object_update_from_subsurf_ccg object.c 391 0x2b02487 6 BKE_object_free_derived_caches object.c 459 0x2b02626 7 mesh_build_data DerivedMesh.c 1999 0x29863ce 8 makeDerivedMesh DerivedMesh.c 2109 0x2986875 9 BKE_object_handle_data_update object_update.c 213 0x2b15b64 10 BKE_object_eval_uber_data object_update.c 342 0x2b16146 11 std::__invoke_impl<void, void ( *&)(Depsgraph *, Scene *, Object *), Depsgraph *, Scene *&, Object *&> invoke.h 60 0x2f09672 12 std::__invoke<void ( *&)(Depsgraph *, Scene *, Object *), Depsgraph *, Scene *&, Object *&> invoke.h 95 0x2f083ce 13 std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *))(Depsgraph *, Scene *, Object *)>::__call<void, Depsgraph *&&, 0ul, 1ul, 2ul>(std::tuple<Depsgraph *&&>&&, std::_Index_tuple<0ul, 1ul, 2ul>) functional 400 0x2f06f8a 14 std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *))(Depsgraph *, Scene *, Object *)>::operator()<Depsgraph *, void>(Depsgraph *&&) functional 484 0x2f052b9 15 std::_Function_handler<void (Depsgraph *), std::_Bind<void ( *(std::_Placeholder<1>, Scene *, Object *))(Depsgraph *, Scene *, Object *)>>::_M_invoke(std::_Any_data const&, Depsgraph *&&) std_function.h 297 0x2f028cb 16 std::function<void (Depsgraph *)>::operator()(Depsgraph *) const std_function.h 687 0x2f1981f 17 DEG::deg_task_run_func deg_eval.cc 94 0x2f18fb2 18 handle_local_queue task.c 419 0x2edd04a 19 task_scheduler_thread_run task.c 448 0x2edd04a 20 start_thread 0x7ffff480f58e ``` ```

This issue was referenced by 50ba4762f6

This issue was referenced by 50ba4762f685996614f6585183fbe8085b89f27d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57566
No description provided.