Fix T57566: Blender 2.8 crashes with the new multires